juno/qa/apps/users-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: users-api
  name: users-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      volumes:
      - name: postgres-ca-certificate
        secret:
          secretName: postgres-qa-ca-certificate
          defaultMode: 0555
      containers:
      - image: index.docker.io/ferlabcrsj/users-api:28894a7ac597b25422e37bde219b9f1ea847323d-1694032251 # {"$imagepolicy": "cqdg-qa-fluxcd:users-api"}
        name: users-api
        resources:
          requests:
            memory: "2048Mi"
            cpu: "1.00"
          limits:
            memory: "4096Mi"
            cpu: "2.00"
        volumeMounts:
        - name: postgres-ca-certificate
          mountPath: /opt/ca
          readOnly: true
